[tool.poetry]
name = "macaron-match"
version = "0.1.0"
description = "Matching macaron shells with image processing"
authors = ["Jonathan Tan <jon.twk@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.21.5"
pandas = "^1.3.5"
opencv-python = "^4.5.4"
Shapely = "^1.8.0"
geopandas = "^0.10.2"
jenkspy = "^0.2.0"

[tool.poetry.dev-dependencies]
notebook = "^6.4.6"
pre-commit = "^2.16.0"
black = "^21.12b0"
pytest = "^6.2.5"
virtualenv = "20.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
